<resources>
    <string name="app_name">Time Balance</string>
    <string name="app_logo">Logo TimeBalance</string>
    <string name="app_tagline">Manage Your Time Wisely</string>
    <string name="nav_header_desc">Navigation header with app introduction</string>
    <string name="nav_all_schedule">All Schedule</string>
    <string name="nav_starred">Starred</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_group_other">Other</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_schedule">Schedule</string>
    <string name="bottom_nav_profile">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="edit_photo">Edit photo</string>
    <string name="delete">Delete</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_date">Select Date</string>
    <string name="today_schedule">Today\'s Schedule</string>
    <string name="starred_schedules">Starred Schedules</string>
    <string name="view_all">View All</string>
    <string name="no_schedules_today">No schedules for selected date</string>
    <string name="no_starred_schedules">No starred schedules yet</string>
    <string name="all_categories">All Categories</string>
</resources>